2020-03-03  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_writer): Use the mapping attributes from
	the mapped objects instead of getting them as arguments.
	(array_writer): Likewise.
	* src/pkl-asm.pks (write): Adjust accordingly.
	* src/pkl-gen.c (pkl_gen_pr_type_array): Clarify why the offset
	and ios are not used in a comment.
	(pkl_gen_pr_type_struct): Likewise.

2020-03-03  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-dg.exp (dg-nbd): Run nbdkit only when
	available.
	(dg-command): Do not append to poke_commands if the current test
	is being skipped as UNSUPPORTED.
	* testsuite/poke.pkl/ios-nbd-1.pk: dg-require nbd.
	* testsuite/poke.pkl/open-3.pk: Likewise.
	* testsuite/poke.cmd/nbd-1.pk: Likewise.
	* HACKING: Note that dg-require should be used before dg-command
	directives.

2020-03-03  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-utils.h (STREQ): Define.
	(STRNEQ): Likewise.
	* src/ios.c: Include pk-uttils.h.
	(STREQ): Remove.
	* src/pvm-val.c: Likewise.
	* src/pvm.jitter: Likewise.
	* src/pk-set.c: Likewise.
	* src/pk-hserver.c: Likewise.
	* src/pk-editor.c: Likewise.
	* src/pkl-typify.c: Likewise.
	* src/pkl-trans.c: Likewise.
	* src/pkl-fold.c: Likewise.
	* src/pkl-env.c: Likewise.
	* src/pkl-ast.c: Likewise.
	* src/pkl-anal.c: Likewise.
	* src/pk-misc.c: Likewise.
	* src/ios-dev-mem.c: Do not include assert.h.
	* src/ios-dev-nbd.c: Likewise.

2020-03-02  Eric Blake  <eblake@redhat.com>

	ios: Add Size to '.info ios'.
	* src/pk-ios.c (pk_cmd_info_ios, print_info_ios): Add Size
	column.
	* doc/poke.texi (info command): Document the addition.
	* testsuite/poke.cmd/file-mode.pk: Adjust expected output.
	* testsuite/poke.cmd/file-relative.pk: Likewise.

2020-03-02  Eric Blake  <eblake@redhat.com>

	* src/pk-ios.c (print_info_ios): Correct hyperlink.

2020-03-02  Eric Blake  <eblake@redhat.com>

	* .gitignore: Implementing '.doc' creates another file.

2020-03-02  Eric Blake  <eblake@redhat.com>
